# pgxl-test-suite

./: .gitignore  README.md  pyproject.toml  pyproject.toml.bak  pyproject.toml.broken  setup.cfg
examples/: config.rigol.yaml  config.siglent.yaml  config.yaml
src/pgxl_testkit/: __init__.py  cli.py  cli_devices.py  config.py  logging.py
src/pgxl_testkit/devices/: flex.py  pgxl.py  rigol.py
src/pgxl_testkit/instruments/: rigol.py  siglent.py  vna_base.py
src/pgxl_testkit/reporters/: __init__.py  console.py  html_pdf.py  junit.py
src/pgxl_testkit/runners/: runner.py
src/pgxl_testkit/testsuites/: burn_in.py  drain_current.py  drain_voltage.py  gain_band.py  linearity_harmonics.py  lpf_sweep.py
src/pgxl_testkit/utils/: artifacts.py  plots.py  techcheck.py
