[metadata]
name = pgxl-testkit
version = 0.2.0
description = PGXL test suite tools

[options]
package_dir =
    = src
packages = find:
install_requires =
    typer>=0.12
    pydantic>=2.7
    pyyaml>=6.0
python_requires = >=3.10

[options.entry_points]
console_scripts =
    pgxl-test = pgxl_testkit.cli:app
    pgxl-dev  = pgxl_testkit.cli_devices:app

[options.packages.find]
where = src